--- a/index.html
+++ b/index.html
@@ -262,6 +262,57 @@
       </div>
     </div>
   </section>
+  <section class="testimonials">
+    <div class="container">
+      <div class="testimonials__wrapper">
+      <div class="testimonials__right">
+        <span class="testimonials__meta">— Testimonials</span>
+        <h2 class="testimonials__title">
+          "Professionals in their craft! All <br>
+           products were super great with <br>
+            strong attention to details, and <br>
+             overall vibe"
+            </h2>
+        <span class="testimonials__name">Polina Kuzina</span>
+        <span class="testimonials__work">Manager at Craftwork</span>
+        <div class="testimonials__inner">
+          <button class="testimonials__btn testimonials__btn-first">
+            \
+          </button>
+          <button class="testimonials__btn testimonials__btn-second">
+            \
+          </button>
+        </div>
+      </div>
+      <div class="testimonials__left">
+        <img src="./static/profecinals.png" alt="girl">
+      </div>
+    </div>
+    </div>
+  </section>
+  <section class="client">
+    <div class="container">
+      <div class="client__top">
+        <h2 class="client__title">Our Clients</h2>
+        <div class="client__inner">
+          <h3 class="client__subtitle">
+            — We worked with
+          </h3>
+          <p class="client__text">
+            Our favorite brands are our friends! 
+            We help them to <br> achieve their goals, they help us to stay sharp.
+          </p>
+        </div>
+      </div>
+      <ul class="client__list">
+        <li class="client__item"><img src="./static/xiaomi.svg" alt="xiaomi" class="client__img"></li>
+        <li class="client__item"><img src="./static/tinder.svg" alt="" class="client__img"></li>
+        <li class="client__item"><img src="./static/apple.svg" alt="" class="client__img"></li>
+        <li class="client__item"><img src="./static/nike.svg" alt="" class="client__img"></li>
+        <li class="client__item"><img src="./static/amd.svg" alt="" class="client__img"></li>
+      </ul>
+    </div>
+  </section>
 <footer></footer>
   <script src="./index.js"></script>
 </body>
