footer toast from

--- a/index.html
+++ b/index.html
@@ -314,7 +314,42 @@
       </ul>
     </div>
   </section>
-<footer></footer>
+<footer class="footer">
+  <div class="container">
+  <div class="footer__top">
+    <img src="./static/Logo_white.svg" alt="logo" class="footer__logo">
+    <ul class="footer__list-top">
+      <li class="footer__item-top">Travel</li>
+      <li class="footer__item-top">Explore</li>
+      <li class="footer__item-top">Works</li>
+      <li class="footer__item-top">About Us</li>
+      <li class="footer__item-top">Contacts</li>
+    </ul>
+    <form class="footer__form" id="tg">
+      <input class="footer__email" type="text" placeholder="Your email" name="email" required>
+      <input class="footer__submit" type="submit" value="send">
+    </form>
+    
+  </div>
+  <div class="footer__line">line</div>
+  <div class="footer__botom">
+    <ul class="footer__list-botom">
+      <li class="footer__item-botom">Terms</li>
+      <li class="footer__item-botom">Promo</li>
+      <li class="footer__item-botom">Download</li>
+      <li class="footer__item-botom">News</li>
+    </ul>
+    <div class="footer__media">
+      <img src="./static/Twitter.svg" alt="" class="footer__sosial">
+      <img src="./static/Linkedin.svg" alt="" class="footer__sosial">
+      <img src="./static/Google.svg" alt="" class="footer__sosial">
+      <img src="./static/Facebook.svg" alt="" class="footer__sosial">
+    </div>
+  </div>
+</div>
+</footer>
+<div id="toast" class="toast"></div>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
